Refactor the Ingredient API